Har gjort ett nytt försök att få ordning på loggning och intygsskapande vid jetty-uppstart vid fitnesse-körning