@@ -23,6 +23,7 @@ if (project.hasProperty('runFitnesse')) {
         contextConfigFile = project(":statistik-web").projectDir.path + "/src/main/webapp/WEB-INF/jetty-context.xml"
         logbackConfigFile = "${projectDir}/src/main/resources/logback.xml"
         jvmArgs = ['-Dspring.profiles.active=dev,embedded,hsa-stub,security-fake,db-resetter', '-XX:MaxPermSize=256M']
+        jvmArgs = ['-Dspring.profiles.active=dev,embedded,hsa-stub,security-fake,db-resetter', '-Dstatistics.test.max.intyg=1', '-XX:MaxPermSize=256M']
     }
 
     farm {
